# ai-cli-assistant

./: .env.example  README.md  main.py  pyproject.toml
src/ai_cli_assistant/: __init__.py  base.py  cli.py  client.py  config.py  registry.py
src/ai_cli_assistant/tools/: __init__.py  calculator.py  weather.py  web_search.py
